tests/NormalTests/paczka1/fuzzy1/54192158.err
Error in line 19: S620 A917 40,7
Error in line 28: QwG5pY6 S620 86,0
Error in line 33: QwG5pY6 A917 82,0
